overflow hidden added to the background image css, no more scrolling on the page issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 /* --Background Image-- */
 
-.cloud-background {
+.farm-background {
     background-image: url('../images/bg image farm.jpg');
     background-size: cover;
     width: 100%;
     height: 100vh;
     position: relative;
+    overflow: hidden;
     
 }
 
